--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
         <div class="one"><img src="images/Jollof-Rice-1.jpg" alt=""></div>
         <div class="two"><img src="images/Jollof-Rice-2.jpg" alt=""></div>
         <div class="three"><img src="images/jollof-3.jpg" alt=""></div>
-        <div class="four"><img src="images/jollof-4.jpg" alt=""></div>
+        <div class="four"><img src="images/jolly.jpg" alt=""></div>
     </div>
 
 </body>
